--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+import:
+  - turbonomic/minions:travis/secrets/.turbo-go-sdk.yml@travis
+
 language: go
 
 
@@ -27,7 +30,7 @@ install: skip
 
 stages:
   - name: deploy
-    if: type = push
+    if: type = push OR type = cron
   - name: pull-request-build
     if: type = pull_request
 
